--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "dotenv": "^16.0.3",
         "eleventy-plugin-gen-favicons": "^1.1.2",
         "eleventy-plugin-nesting-toc": "^1.3.0",
+        "express": "^4.18.2",
+        "express-openid-connect": "^2.17.1",
         "fs-file-tree": "^1.1.1",
         "glob": "^10.2.1",
         "gray-matter": "^4.0.3",
