--- a/vercel.json
+++ b/vercel.json
@@ -7,4 +7,7 @@
         { "handle": "filesystem" },
         { "src": "/(.*)", "status": 404, "dest": "/404" }
       ]
+    "rewrites": [
+        { "source":"/login", "destination":"/callback" }
+    ]
 }
