--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
     "routes": [
         { "handle": "filesystem" },
         { "src": "/(.*)", "status": 404, "dest": "/404" }
-      ]
+      ],
     "rewrites": [
-        { "source":"/login", "destination":"/callback" }
+        { "source":"/login", "destination":"/auth-test" }
     ]
 }
