--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,8 @@
     "installCommand": "npm install",
     "buildCommand": "npm run build",
     "devCommand": "npm run start",
-    "routes": [
-        { "handle": "filesystem" },
-        { "src": "/(.*)", "status": 404, "dest": "/404" }
-      ],
     "rewrites": [
-        { "source":"/login", "destination":"/auth-test" }
+        { "source":"/login", "destination":"/auth-test" },
+        { "source": "/(.*)", "statusCode": 404, "destination": "/404" }
     ]
 }
