--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "cross-env": "^7.0.3",
         "html-minifier": "^4.0.0",
         "node-html-parser": "^6.1.4",
+        "nodemon": "^3.0.3",
         "sass": "^1.49.9"
     },
     "dependencies": {
@@ -35,6 +36,7 @@
         "fs-file-tree": "^1.1.1",
         "glob": "^10.2.1",
         "gray-matter": "^4.0.3",
+        "helmet": "^3.23.3",
         "markdown-it": "^13.0.1",
         "markdown-it-anchor": "^8.6.7",
         "markdown-it-attrs": "^4.1.6",
@@ -43,6 +45,7 @@
         "markdown-it-mathjax3": "^4.3.1",
         "markdown-it-plantuml": "^1.4.1",
         "markdown-it-task-checkbox": "^1.0.6",
+        "morgan": "^1.10.0",
         "npm-run-all": "^4.1.5"
     }
 }
