--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=La Ermita de Rubén
+SITE_NAME_HEADER=Hub de La Ermita de Rubén
 SITE_MAIN_LANGUAGE=es
 SITE_BASE_URL=https://ermita.rubenrivera.mx
 SHOW_CREATED_TIMESTAMP=true
@@ -14,13 +14,13 @@ STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
 BASE_THEME=dark
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=false
-dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowBacklinks=true
+dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
-dgEnableSearch=false
-dgShowToc=false
-dgLinkPreview=false
-dgShowTags=false
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=true
+dgShowTags=true
